--- a/_posts/2017-12-05-welcome.markdown
+++ b/_posts/2017-12-05-welcome.markdown
@@ -2,6 +2,7 @@
 layout: post
 title:  "Welcome to openEO!"
 date:   2017-12-05 14:33:31 +0100
+author: Edzer Pebesma
 categories: openEO news
 ---
 
