--- a/_posts/2019-03-07-openeo-api-040.md
+++ b/_posts/2019-03-07-openeo-api-040.md
@@ -4,7 +4,6 @@ title:  "openEO API v0.4.0 released"
 date:   2019-03-07
 author: Matthias Mohr
 categories: openEO news
-draft: true
 ---
 
 Today, the openEO Consortium **released the new version 0.4.0 of the [openEO API](https://open-eo.github.io/openeo-api/)**. The following blog posts will give a short overview over the most notable changes and additions to the API specification.
@@ -59,10 +58,10 @@ Similarly, it would work in the R client. You can also check the [process graph 
 
 ## Other improvements
 
-We also updated our Data Discovery to be compatible with [the most recent version of STAC, v0.6.2](https://medium.com/@cholmes/stac-extensions-and-0-6-2-release-b0cf34272ed7). In the last months, openEO contributed several extensions to the STAC specification such as [an extension to describe Synthetic-Aperture Radar (SAR) data](https://github.com/radiantearth/stac-spec/blob/master/extensions/sar/README.md) or [an extension to describe Data Cubes](https://github.com/radiantearth/stac-spec/blob/master/extensions/datacube/README.md).
+We also updated our Data Discovery to be compatible with [the most recent version of STAC, v0.6.2](https://medium.com/radiant-earth-insights/stac-extensions-and-0-6-2-release-b0cf34272ed7). In the last months, openEO contributed several extensions to the STAC specification such as [an extension to describe Synthetic-Aperture Radar (SAR) data](https://github.com/radiantearth/stac-spec/blob/master/extensions/sar/README.md) or [an extension to describe Data Cubes](https://github.com/radiantearth/stac-spec/blob/master/extensions/datacube/README.md).
 
-Despite the process and data discovery, we generally improved the discovery of openEO back-ends. For example, the API now also allows clients to automatically detect supported API versions at the back-end, so that users don't need to keep track of that and can always connect to the same URL withour worrying about compatibility between clients and back-ends. Our approach to [user-defined functions (UDFs)](https://github.com/Open-EO/openeo-udf) was also better integrated withing the API. UDF runtimes can be discovered now and well-defined processes allow executing UDFs. Many more improvements were incorporated into the API specification based on feedback from the review meeting, discussions with users and implementations. A [full changelog](https://open-eo.github.io/openeo-api/changelog/) is available.
+Despite the process and data discovery, we generally improved the discovery of openEO back-ends. For example, the API now also allows clients to automatically detect supported API versions at the back-end, so that users don't need to keep track of that and can always connect to the same URL withour worrying about compatibility between clients and back-ends. Our approach to [user-defined functions (UDFs)](https://github.com/Open-EO/openeo-udf) was also better integrated withing the API. UDF runtimes can be discovered now and well-defined processes allow executing UDFs. Many more improvements were incorporated into the API specification based on feedback from the review meeting, discussions with users and implementations (see the [full changelog](https://open-eo.github.io/openeo-api/changelog/)).
 
 ## Next steps
 
-This is the API version, which is targeted towards getting the first more universally usable version of the openEO clients and back-ends released. We will follow up with a new blog post once this is achieved so that all interested parties can use clients and back-ends to get a first solid impression of the project. Still, this is not the last version and we will continue to improve the API, client and back-ends. So any feedback is highly appreciated and can be sent out way via GitHub issues in the corresponding [GitHub repositories](https://github.com/open-eo) or any of the other [contact options](http://openeo.org/contact/).
+This is the API version, which is targeted towards getting the first more universally usable version of the openEO clients and back-ends released. We will work hard now to implement the back-ends and clients to comply with the new API version and will follow up with a new blog post once this is achieved. Afterwards, all interested parties can use clients and back-ends to get a first solid impression of the project. In the meantime, it is already possible to make experiments with the back-ends and clients working on the API version 0.3.1. Please [contact us](http://openeo.org/contact/) to get more information about it. Having said that, the new version is not the last one and we will continue to improve the API, client and back-ends. So any feedback is highly appreciated and can be sent our way via GitHub issues in the corresponding [GitHub repositories](https://github.com/open-eo) or via any of the other [contact options](http://openeo.org/contact/).
