Fixed outdated example

--- a/_posts/2019-03-07-openeo-api-040.md
+++ b/_posts/2019-03-07-openeo-api-040.md
@@ -26,7 +26,7 @@ blue = s2_radio.band('B02')
 red = s2_radio.band('B04')
 nir = s2_radio.band('B08')
 evi_cube = (2.5 * (nir - red)) / ((nir + 6.0 * red - 7.5 * blue) + 1.0)
-result = evi_cube.reduce("temporal", "min").export("GTiff")
+result = evi_cube.reduce("temporal", "min").save_result("GTiff")
 ```
 
 In JavaScript it is planned to work as follows:
@@ -47,11 +47,11 @@ function eviReducer(b, data) {
 
 var connection = OpenEO.connect("https://example.openeo.org");
 var builder = connection.buildProcessGraph();
-var result = builder.load_collection("Sentinel-2", {west: 16.1, east: 16.6, north: 48.6, south: 47.2}, ["2018-01-01", "2018-02-01"])
-                    .filter_bands(["B02", "B04", "B08"])
+var result = builder.loadCollection("Sentinel-2", {west: 16.1, east: 16.6, north: 48.6, south: 47.2}, ["2018-01-01", "2018-02-01"])
+                    .filterBands(["B02", "B04", "B08"])
                     .reduce("spectral", eviReducer)
                     .reduce("temporal", (b, data) => data.min())
-                    .export("GTiff");
+                    .saveResult("GTiff");
 ```
 
 Similarly, it would work in the R client. You can also check the [process graph documentation](https://open-eo.github.io/openeo-api/processgraphs/#example) if you'd like to know how this algorithm looks as a process graph.
