Typo and proper PNG conversion of the logo

--- a/_posts/2019-03-07-openeo-api-040.md
+++ b/_posts/2019-03-07-openeo-api-040.md
@@ -39,7 +39,7 @@ function eviReducer(b, data) {
   return b.product([
     2.5,
     b.divide([
-      b.substract([nir, red]),
+      b.subtract([nir, red]),
       b.sum([1, nir, b.product([6, red]), b.product([-7.5, blue])])
     ])
   ]);
