--- a/news/2019-03-07-openeo-api-040.md
+++ b/news/2019-03-07-openeo-api-040.md
@@ -5,7 +5,7 @@ date:   2019-03-07
 author: Matthias Mohr
 ---
 
-Today, the openEO Consortium **released the new version 0.4.0 of the [openEO API](https://open-eo.github.io/openeo-api/)**. The following blog posts will give a short overview over the most notable changes and additions to the API specification.
+Today, the openEO Consortium **released the new version 0.4.0 of the [openEO API](https://open-eo.github.io/openeo-api/)**. The following blog post will give a short overview over the most notable changes and additions to the API specification.
 
 ## New process catalogue and process graph changes
 
