--- a/news/2019-03-07-openeo-api-040.md
+++ b/news/2019-03-07-openeo-api-040.md
@@ -59,7 +59,7 @@ Similarly, it would work in the R client. You can also check the [process graph 
 
 We also updated our Data Discovery to be compatible with [the most recent version of STAC, v0.6.2](https://medium.com/radiant-earth-insights/stac-extensions-and-0-6-2-release-b0cf34272ed7). In the last months, openEO contributed several extensions to the STAC specification such as [an extension to describe Synthetic-Aperture Radar (SAR) data](https://github.com/radiantearth/stac-spec/blob/master/extensions/sar/README.md) or [an extension to describe Data Cubes](https://github.com/radiantearth/stac-spec/blob/master/extensions/datacube/README.md).
 
-Despite the process and data discovery, we generally improved the discovery of openEO back-ends. For example, the API now also allows clients to automatically detect supported API versions at the back-end, so that users don't need to keep track of that and can always connect to the same URL withour worrying about compatibility between clients and back-ends. Our approach to [user-defined functions (UDFs)](https://github.com/Open-EO/openeo-udf) was also better integrated withing the API. UDF runtimes can be discovered now and well-defined processes allow executing UDFs. Many more improvements were incorporated into the API specification based on feedback from the review meeting, discussions with users and implementations (see the [full changelog](https://open-eo.github.io/openeo-api/changelog/)).
+Despite the process and data discovery, we generally improved the discovery of openEO back-ends. For example, the API now also allows clients to automatically detect supported API versions at the back-end, so that users don't need to keep track of that and can always connect to the same URL without worrying about compatibility between clients and back-ends. Our approach to [user-defined functions (UDFs)](https://github.com/Open-EO/openeo-udf) was also better integrated withing the API. UDF runtimes can be discovered now and well-defined processes allow executing UDFs. Many more improvements were incorporated into the API specification based on feedback from the review meeting, discussions with users and implementations (see the [full changelog](https://open-eo.github.io/openeo-api/changelog/)).
 
 ## Next steps
 
