--- a/news/2022-05-12-r-client-v120.md
+++ b/news/2022-05-12-r-client-v120.md
@@ -5,7 +5,7 @@ date:   2022-05-12
 author: Matthias Mohr, Florian Lahn
 ---
 
-Today, we released a new version 1.2.0 of the openEO R Client, which features a couple of [improvements and bug fixes](https://github.com/Open-EO/openeo-r-client/blob/master/NEWS.md#version-120).
+Today, we released a new version 1.2.0 of the openEO R Client, which features a couple of [improvements and bug fixes](https://github.com/Open-EO/openeo-r-client/releases/tag/v1.2.0).
 
 You can get it through CRAN: [openeo](https://cran.r-project.org/package=openeo)
 This means you can  install or update the R client with the following command:
